--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -1912,7 +1912,7 @@
  Germany.603.d: "we need to request some traditions of our troops to make sure our army stays aligned with our democratic values but also fostering a sense of identity and continuity while remaining firmly grounded in the principles of Germany’s democratic state"
  Germany.603.a: "we should prevent the uncritical glorification of past military."
  Germany.603.b: "we need to remember our soldiers the values of courage, integrity, and responsibility"
- Germany.603.c: "we need to give our army his own traditions, beside from the questionable past ones."
+ Germany.603.c: "we need to give our army its own traditions, beside from the questionable past ones."
  Germany.604.t: "Allegations of Extremists in the Bundeswehr"
  Germany.604.d: "In recent years, the Bundeswehr, Germany's armed forces, has faced scrutiny and controversy due to allegations of extremist elements within its ranks. These allegations have raised significant concerns about the integrity, safety, and democratic values upheld by the military."
  Germany.604.a: "we need to strengthen the MAD to prevent Extremists."
@@ -1928,6 +1928,63 @@
  Germany.606.a: "we should make them play a Concert for our people with free entrence."
  Germany.606.b: "we should organise a Charity concert for our Veterans."
  Germany.606.c: "we should organise a concert at a local festial."
+
+# Bundeswehr Anger
+ Germany_Mech.10.t: "Rumors in the Army"
+ Germany_Mech.10.d: "It is becoming increasingly clear that the soldiers are not particularly satisfied with our current politics."
+ Germany_Mech.10.a: "just let them complain"
+ Germany_Mech.10.b: "let´s appease them a bit"
+ Germany_Mech.10.c: "a few disciplinary measures could improve the situation"
+ Germany_Mech.11.t: "Protestnotes to the Generals"
+ Germany_Mech.11.d: "Due to dissatisfaction, several commanders were handed letters of demand today."
+ Germany_Mech.11.a: "just let them complain"
+ Germany_Mech.11.b: "let´s appease them a bit"
+ Germany_Mech.11.c: "a few disciplinary measures could improve the situation"
+ Germany_Mech.12.t: "Protest in Media"
+ Germany_Mech.12.d: "Today we received news that the chairman of the Bundeswehr union publicly criticized our politics harshly in a talk show."
+ Germany_Mech.12.a: "just let them complain"
+ Germany_Mech.12.b: "let´s appease them a bit"
+ Germany_Mech.12.c: "a few disciplinary measures could improve the situation"
+ Germany_Mech.13.t: "A shift towards the political right"
+ Germany_Mech.13.d: "It is becoming increasingly clear that the discontent of our soldiers is leading to a growing number of them being associated with right-wing parties."
+ Germany_Mech.13.a: "just let them complain"
+ Germany_Mech.13.b: "let´s appease them a bit"
+ Germany_Mech.13.c: "a few disciplinary measures could improve the situation"
+ Germany_Mech.14.t: "Far Right Networks"
+ Germany_Mech.14.d: "The Military Counterintelligence Service (MAD) informs us that right-wing networks have been uncovered within the troops."
+ Germany_Mech.14.a: "just let them complain"
+ Germany_Mech.14.b: "let´s appease them a bit"
+ Germany_Mech.14.c: "a few disciplinary measures could improve the situation"
+ Germany_Mech.15.t: "Rumors in General staff"
+ Germany_Mech.15.d: "It is becoming increasingly clear that the Generals are not particularly satisfied with our current politics."
+ Germany_Mech.15.a: "just let them complain"
+ Germany_Mech.15.b: "let´s appease them a bit"
+ Germany_Mech.15.c: "a few disciplinary measures could improve the situation"
+ Germany_Mech.16.t: "Generals meeting in secret"
+ Germany_Mech.16.d: "We have been informed that some high-ranking officers and generals have secretly met and explored ways to act against our policies."
+ Germany_Mech.16.a: "just let them complain"
+ Germany_Mech.16.b: "let´s appease them a bit"
+ Germany_Mech.16.c: "a few disciplinary measures could improve the situation"
+ Germany_Mech.17.t: "A high ranking General on TV"
+ Germany_Mech.17.d: "A high ranking General yesterday was invited to a talk show about the status of the Army, and he start talk about our desicisions in a very indignant way."
+ Germany_Mech.17.a: "just let them complain"
+ Germany_Mech.17.b: "let´s appease them a bit"
+ Germany_Mech.17.c: "a few disciplinary measures could improve the situation"
+ Germany_Mech.18.t: "A General retire in protest"
+ Germany_Mech.18.d: "A high ranking General has yesterday send us his resignation request, because he can´t support our Military management and Politics."
+ Germany_Mech.18.a: "just let them complain"
+ Germany_Mech.18.b: "let´s appease them a bit"
+ Germany_Mech.18.c: "a few disciplinary measures could improve the situation"
+ Germany_Mech.19.t: "former Generals join far right parties"
+ Germany_Mech.19.d: "because of the dissatisfaction with our actual Goverment, some of our former high ranking Officers are joining far right parties, how should we handle this in the troop?"
+ Germany_Mech.19.a: "just let them complain"
+ Germany_Mech.19.b: "let´s appease them a bit"
+ Germany_Mech.19.c: "a few disciplinary measures could improve the situation"
+ Germany_Mech.20.t: "Some Generals try a coup d´etat"
+ Germany_Mech.20.d: "Some generals and right-wing extremists have joined forces in an attempted coup, seizing command of parts of the Bundeswehr. Fortunately, the coup was thwarted because the majority of the troops still support the constitution and remained loyal to the democratic order. Despite this success, we are now faced with a critical decision: determining who will lead our defense moving forward. This leadership must be committed to upholding our democratic values and ensuring the stability and integrity of our armed forces. It is imperative that we carefully choose individuals who will restore confidence and maintain order within our military ranks."
+ Germany_Mech.20.a: "Schneiderhahn will save us"
+ Germany_Mech.20.b: "Tiger-Willi is the only right choice"
+
 
 
 # YEARLY EVENTS
@@ -2855,7 +2912,7 @@
  GER_add_5_heer_reform_III: "Will increase §HStructure Neues Heer Reform§! by §H5%§!"
  GER_add_10_heer_reform_III: "Will increase §HStructure Neues Heer Reform§! by §H10%§!"
  GER_Decision_Bundeswehr_anger: "Bundeswehr mood"
- GER_Decision_Bundeswehr_anger_desc: "The Bundeswehr is in a time of transition. The end of the Cold War, the NATO eastward expansion, and many other factors have made a large army unnecessary. It is now time to adapt the military to the new circumstances. However, we must consider that our generals will not agree if we reduce our troops too drastically. \n\n§YBundeswehr anger§!: [?ROOT.GER_Bundeswehr_anger]%\n§YPeace dividend§!: [?ROOT.GER_Peace_dividend]%"
+ GER_Decision_Bundeswehr_anger_desc: "The Bundeswehr is in a time of transition. The end of the Cold War, the NATO eastward expansion, and many other factors have made a large army unnecessary. It is now time to adapt the military to the new circumstances. However, we must consider that our generals will not agree if we reduce our troops too drastically. \n\n§YOfficer Anger§!: [?ROOT.GER_Officer_anger]%\n§YTroop Anger§!: [?ROOT.GER_Troop_anger]%"
 
  GER_idea_east_german_debuff1: "East German Anger"
  GER_idea_east_german_debuff1_desc: "East Germans are quite pissed about their living conditions, and now they are acting against our interests..\n§W--------------§!\nThis National Spirit can be §RRemoved§! if we §GImprove§! East German opinion, or raise their standard of living."
@@ -2952,5 +3009,5 @@ Drones: "Drones"
  GER_lease_acces_USA_TT: "§Ywe get acces to GPS System for 365 days§!"
  GER_lease_acces_china_TT: "§Ywe get acces to Beidou System for 365 days§!"
  GER_lease_acces_SOV_TT: "§Ywe get acces to GLONASS System for 365 days§!"
- GER_modify_Peace_dividend_tt: "§YPeace dividend§! changes by [?modify_Peace_dividend|+0] (Current: §Y[?ROOT.GER_Peace_dividend]%§!)\n"
- GER_modify_Bundeswehr_anger_tt: "§YBundeswehr anger§! changes by [?modify_Bundeswehr_anger|+0] (Current: §Y[?ROOT.GER_Bundeswehr_anger]%§!)\n"
+ GER_modify_Troop_anger_tt: "§YTroop Anger§! changes by [?modify_Troop_anger|+0] (Current: §Y[?ROOT.GER_Troop_anger]%§!)\n"
+ GER_modify_Officer_anger_tt: "§YOfficer Anger§! changes by [?modify_Officer_anger|+0] (Current: §Y[?ROOT.GER_Officer_anger]%§!)\n"
