--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -433,7 +433,7 @@
  UKR_military_state_5: "Disregarded military sector"
  UKR_military_state_4: "Poorly organised military sector"
  UKR_military_state_3: "Managed military sector"
- UKR_military_state_2: "Optmized military sector"
+ UKR_military_state_2: "Optimized military sector"
  UKR_military_state_1: "Well-run military sector"
  UKR_veteran_movement: "Veteran Movement"
  UKR_volunteer_movement: "Volunteer Movement"
@@ -449,7 +449,7 @@
  ukraine_coup.1.t: "Russia Attempted to Coup Us!"
  ukraine_coup.1.d: "Latest report from Kyiv state that Russian-supported agents were about to coup our government! This is a direct threat to our independence from Russian side."
  ukraine_coup.1.a: "Basterds."
- ukraine_coup.2.t: "Russia Couped Us!"
+ ukraine_coup.2.t: "Russia Coup Us!"
  ukraine_coup.2.d: "Latest report from Kyiv state that Russian-supported agents couped our government! Now our country is going to be ruled by pro-Russian establishment clique."
  ukraine_coup.2.a: "WTF?"
 
