--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -441,7 +441,7 @@
  CHI_Resume_the_Civil_War: "Resume the Civil War"
  CHI_Resume_the_Civil_War_desc: "Tensions across the Taiwan Strait have reached boiling point. Our ancestors call for blood. The time has come to unleash the might of the People's Liberation Army on our historical foes, and let slip the dogs of war."
  CHI_End_of_ROC: "End of ROC"
- CHI_End_of_ROC_desc: "Finally, the rump state got its destination, Repulic of China met her fate. The Chinese civil war end by the total victory of mainland. All those moments will be lost in time, like tears in rain."
+ CHI_End_of_ROC_desc: "Finally, the rump state got its destination, Republic of China met her fate. The Chinese civil war end by the total victory of mainland. All those moments will be lost in time, like tears in rain."
  CHI_Gateway_To_Pacific: "Gateway To Pacific"
  CHI_Gateway_To_Pacific_desc: "Now, the first island chain breaks, our fleet got access to the Pacific, the next challenge is in front of us."
  CHI_liquidate_the_evil: "Liquidate the Evil of Past"
