--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1318,7 +1318,6 @@
  
  china_news.19.t: "The Outer Mongolian Special Administrative Region is Established"
  china_news.19.d: "After the recent moves to deepen friendship between Outer Mongolia and the Mainland, and after realizing that it cannot continue to exist without the Mainland support, the Mongolian leadership has decided to replace Outer Mongolia's \"Nation\" status with that of \"Special Administrative Region\". This change of status is accompanied by a large degree of reunification."
- china_news.19.d_war: "The victorious Chinese have announced the establish of a Special Administrative Region of Outer Mongolia, trumpeting the move as a sign of China's capacity for compromise and moderation. While the new S.A.R. may eventually have a degree of independence from Chinese rule, in its current state it is in no position to do so."
  china_news.19.a: "China is taking back its pieces."
  
  china_news.20.t: "China Drops its Opposition to Taiwanese Independence"
@@ -1343,10 +1342,9 @@
  china_news.24.t: "The Taiwan Special Administrative Region is Established"
  china_news.24.d: "Following a gradual improvement in relations between mainland China and Taiwan, [TAI.GetLeader]'s government has agreed to rejoin the mainland as a Special Administrative Region in an exchange for a preservation of Taiwan's political and legal autonomy. Politicians from the pro-reunification Pan-Blue Coalition have made statements lauding this move as the beginning of a new, better part of Taiwanese history while their pro-independence Pan-Green counterparts have expressed reservations."
  china_news.24.d_coup: "Following the pro-Chinese coup in Taiwan, the new \"temporary\" administration has agreed to rejoin the People's Republic of China as a Special Administrative Region, as an apparent compromise. While opposition to the new administration has been muted, public support for this move is far from clear."
- china_news.24.d_war: "The victorious Chinese have announced the establish of a Special Administrative Region of Taiwan, trumpeting the move as a sign of China's capacity for compromise and moderation. While the new S.A.R. may eventually have a degree of independence from Chinese rule, in its current state it is in no position to do so."
  china_news.24.a: "The Chinese civil war has finally come to an end."
  
- china_news.25.t: "Repubic of China Government ceases operations"
+ china_news.25.t: "Republic of China Government ceased operations"
  china_news.25.d: "With the end of the Chinese Civil War, the former Nationalist government did not escape its fate. The People's Liberation Army that crossed the Taiwan Strait finally removed the Blue Sky and White Sun flag from the Taipei Presidential Palace and Taoyuan Airport. it's all over."
  china_news.25.a: "Finally"
  
@@ -1368,7 +1366,7 @@
  china_news.29.a: "Mobilize all forces for disaster relief!"
  china_news.29.b: "A terrible lost."
  
- china_news.30.t: "2008 summer Beijing olympics"
+ china_news.30.t: "2008 Summer Beijing Olympics"
  china_news.30.d: "The 29th Olympic Games were held in Beijing, the capital of the People's Republic of China, from August 8 to 24, 2008. This Olympic Games is the first Summer Olympics held in China. It is the third time that the Olympic Games are held in a socialist country after the 1980 Moscow Olympics and the 1984 Sarajevo Winter Olympics. A total of 43 new world records and 132 new Olympic records were set at this Olympic Games, and 87 countries were on the medal list. The host country, the People's Republic of China, topped the gold medal list with 51 gold medals, becoming the first Asian country to top the gold medal list in Olympic history, strengthening China's status as a sports power. The United States is the country with the most medals at this Olympics with 112 medals."
  china_news.30.a: "A good game."
  china_news.30.b: "We show the world the best of us."
