--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1329,7 +1329,7 @@
  china_news.21.a: "Let's see how this turns out."
  china_news.21.b: "Improbable!"
  
- china_news.22.t: "China Blockades Taiwanese Islands"
+ china_news.22.t: "China Blockades Taiwan Islands"
  china_news.22.d: "Following rising tensions with Taiwan, the People's Liberation Army Navy has imposed a blockade on Taiwan's Kinmen and Matsu islands. This move is reportedly aimed at preventing Taiwan's ability to prepare the islands for a possible Chinese invasion as well as hindering Taiwanese trade with the outside world.\n\nWorld leaders have been divided between those who explicitly criticized Chinese aggression and others who called for calm. The U.N. Secretary General made a particularly strong appeal for peace, urging the Chinese government to remember that \"the international order is uphold not by violence and brute force, but by diplomacy and restraint.\""
  china_news.22.a: "Tensions are rising."
  china_news.22.b: "This does not bode well for us."
