--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -250,3 +250,5 @@
  LOADING_TIP_263: "Comrades! We must abolish the cult of the individual decisively, once and for all.\n - Nikita Khrushchyov -"
  LOADING_TIP_264: "How can you govern the country with insects like this as part of your government?\n - Kim Jae-gyu, the assassination of South Korean President Park Chung-hee. -"
  LOADING_TIP_265: "There is no time to hesitate, we must strike hard!\n - Chun Doo-hwan, instructions on the suppression of the Gwangju democracy incident. -"
+ LOADING_TIP_266: "Being powerful is like being a lady. If you have to tell people you are, you aren't.\n - Margaret Thatcher -"
+ LOADING_TIP_267: "Fight! Fight! Fight! \n - Donald Trump, after assassination attempt on him -"
