--- a/localisation/english/MD_focus_IND_l_english.yml
+++ b/localisation/english/MD_focus_IND_l_english.yml
@@ -644,7 +644,7 @@ l_english:
  indonesia.772.d: "Radical Leader of the organization \"FPI\", Rizieq Shihab, has been arrested and is now awaiting trial. This is a major win for Indonesian security, as our democracy is no longer in direct threat of radicals and their backward ideals!"
  indonesia.772.a: "A Win for democracy"
  #east timor loc
- indonesia.2.t: "Question of East Timor"
+ indonesia.2.t: "The Question of East Timor"
  indonesia.2.d: "The time has come, a bitter moment for our nation. The people of East Timor, one of our many islands are demanding independence. Brutal protests, riots, and clashes have caused much instability and it has seriously slowed down political and social progress. It is now up to us to decide the nation's fate, we must either comply with the U.N's wishes or go on our own path"
  indonesia.2.a: "It is what the people of East Timor want.. Not us"
  indonesia.2.b: "They want to do what now?!"
