--- a/localisation/english/MD_focus_TIM_l_english.yml
+++ b/localisation/english/MD_focus_TIM_l_english.yml
@@ -1,12 +1,11 @@
 ﻿#By Iranian Maggot
 l_english:
-
  #events
  Timor_news.1.t: "Timor-Leste is Free!"
  Timor_news.1.desc: "It is official. The U.N's approval of East Timor's constitution has finally been inacted, and Timor-Leste is officially a sovereign and independent nation as well as a full member state of the United Nations. After decades of struggle and drama with the Indonesian administration and armed forces, two parties came to an agreement, and peace was established."
  Timor_news.1.o1: "Let us hope for good future relations"
  Timor.26.t: "Indonesia Approves of UN Set East Timor Election Date"
- Timor.26.d: ""
+ Timor.26.d: "After looking at the UN charter for East Timorese democracy, Indonesia sent them off with their blessing, and East Timor is set to become fully independent on May 20."
  Timor.26.o1: "Onward to democracy"
  Timor.27.t: "The First East Timorese Presidential Election!"
  Timor.27.d1: ""
@@ -14,14 +13,14 @@ l_english:
  Timor.27.o1: "Xanana will lead the people!"
  Timor.27.o2: "Francisco Xavier do Amaral is our hero!"
  Timor.28.t: "Indonesia Denies Us Independence!"
- Timor.28.desc: ""
+ Timor.28.desc: "The other day, our nation received the equivalent of a death note, Indonesia sent us an ultimatum demanding an unconditional surrender of our sovereignty and the calling away of all international humanitarian missions within our nation, claiming that 'Indonesian territory needs not foreign charity'. Our de-facto split with Indonesia, that some would call 'audacious', was sanctioned by the former Indonesian president Bacharuddin Habibie in an attempt to westernise Indonesia and Australia's John Howard. It seems that the ousting of Habibie followed a radical change regarding Indonesia's stance on our autonomy, and Australia seems to be the only friend we have right now, as well as our only hope..."
  Timor.28.o1: "Outrageous, we call upon Australia to help us!"
  Timor.29.t: "Australia Abandons Us"
- Timor.29.desc: ""
+ Timor.29.desc: "In response to our desperate call for help to whom we thought was our ally, Australia has dropped support for us and gave up on our democracy. It seems that they have little interest to support a free people pursue independence, and their hypocrisy has left us with very few options. If we stay defiant to Indonesia, a nation much larger than us, we have no doubt that they will use their military to the fullest extent. But if we can hold off for long enough, Indonesia's reckless behaviour will draw international condemnation and they will be forced to back down and we will gain our freedom! On the other hand, many of our people would die in this conflict which begs the question, will there be anything left for us at road's end?..."
  Timor.29.o1: "We don't need any help, we will fight them ourselves!"
  Timor.29.o2: "It is better to spare our people from needless bloodshed"
  Timor.30.t: "East Timor Surrenders Peacefully"
- Timor.30.desc: ""
+ Timor.30.desc: "It seems that the East Timorese revolutionaries made the wise choice of conceding to our peace treaty and backed down under the pressure of the looming inevitability of another military intervention if they continued with their defiance."
  Timor.30.o1: "We knew they'd come around"
  Timor.31.t: "The War is Over!"
  Timor.31.desc: ""
@@ -47,6 +46,17 @@ l_english:
  Timor.37.o1: "They've gone too far"
  Timor.37.o2: "We shouldn't get too involved in everything"
  #national spirits
+ TIM_UN_Mission: "UN Mission"
+ TIM_UN_Mission_desc: "The United Nations has a heavy presence in our current administration, and therefore a heavy influence on its current politics."
+ TIM_UN_Background_Mission: "UN Background Mission"
+ TIM_UN_Background_Mission_desc: "After gaining independence, some delegations and services from the United Nations stayed behind to further help us out, the mess in our country left behind by Indonesia isn't fully cleaned up yet after all"
+ TIM_Resistance_Movement: "East Timor Resistance"
+ TIM_Resistance_Movement_desc: "The integrity of our sovereignty shall not be compromised, and with the help of Australia, we are ready to cast away waves upon waves of the colonisers, and free East Timor!"
+ TIM_Resistance_Movement_Alone: "East Timor Resilience"
+ TIM_Resistance_Movement_Alone_desc: "We stand alone, all of East Timor comes together to overthrow our oppressors, for freedom and our people, Indonesia beware!"
  #tooltips
  Timor.34.tt: "If we don't put this §Ruprising§! to rest in §120 days§Y, we will draw §Yinternational condemnation§! and have to pull out of §YEast Timor§! or face §Rgrave§! consequences."
  #decisions
+ TIM_Independence_war: "The War For Independence"
+ TIM_war_for_freedom: "Hold Off Indonesia"
+ TIM_war_for_freedom_desc: "After §Y4 months§!, the §Yinternational community§! will be fully aware of the abominable activities of [IND.GetFlag] §RIndonesia's§! §YTNI§! and finally cause them to fold under the pressure."
