--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2323,6 +2323,8 @@
  GER_russian_buddies: "German-Russian Friendship"
  Ger_idea_European_Army: "German Anker Army"
  Ger_idea_European_Army_desc: "Germany form the Anker for a European Army, by form integrative structures his smaller Allies."
+ GER_idea_Peace_dividende: "Peace Dividend"
+ GER_idea_Peace_dividende_desc: "After the end of the Cold War and the collapse of the USSR, there is no longer a need to maintain a large military force. Instead, we should redirect those funds to benefit our people and invest in areas such as social services, infrastructure, and public welfare. By reallocating these resources, we can improve the quality of life and promote economic growth, ensuring that the peace dividend contributes positively to our society."
 
 ### Dynamic Modifiers
  GER_wind_farms: "§GWind Farms§!"
@@ -3011,3 +3013,10 @@ Drones: "Drones"
  GER_lease_acces_SOV_TT: "§Ywe get acces to GLONASS System for 365 days§!"
  GER_modify_Troop_anger_tt: "§YTroop Anger§! changes by [?modify_Troop_anger|+0] (Current: §Y[?ROOT.GER_Troop_anger]%§!)\n"
  GER_modify_Officer_anger_tt: "§YOfficer Anger§! changes by [?modify_Officer_anger|+0] (Current: §Y[?ROOT.GER_Officer_anger]%§!)\n"
+ GER_Bundeswehr_anger_I_TT: "§YLet's open the doors of our barracks to visitors.§!"
+ GER_Bundeswehr_anger_II_TT: "§YLet´s visit swearing in ceremony§!"
+ GER_Bundeswehr_anger_III_TT: "§YWe need to choose a way to honor our Veterans§!"
+ GER_Bundeswehr_anger_IV_TT: "§YWe should rethink some old traditions§!"
+ GER_Bundeswehr_anger_V_TT: "§YLet´s investigate the allegations of extremists§!"
+ GER_Bundeswehr_anger_VI_TT: "§YLet´s find a way to handle the mental health of our troopd§!"
+ GER_Bundeswehr_anger_VII_TT: "§YMusic could prevent a lot of problems§!"
