Finished East Timor localisation
I feel nauseous (ik it's nauseated blah blah blah)

--- a/localisation/english/MD_focus_TIM_l_english.yml
+++ b/localisation/english/MD_focus_TIM_l_english.yml
@@ -8,8 +8,8 @@ l_english:
  Timor.26.d: "After looking at the UN charter for East Timorese democracy, Indonesia sent them off with their blessing, and East Timor is set to become fully independent on May 20."
  Timor.26.o1: "Onward to democracy"
  Timor.27.t: "The First East Timorese Presidential Election!"
- Timor.27.d1: ""
- Timor.27.d2: ""
+ Timor.27.d1: "We are free! Now to legitimise our new government, we must choose a leader. Xanana Gusmão has been instrumental in the revolutionary efforts, having served in the administration of East Timor during its short history of freedom in 1975 and fought Indonesisa as the head of the Falintil, the armed wing of Fretilin. He was captured later and imprisoned in Jakarta where he also met Francisco Xavier do Amaral, who was president of East Timor during the freedom period. Amaral is also a national hero, as he endured much suffering as a result of his attempts to secure independence for East Timor, he even coordinated independence movements during capture, with Gusmão of course. Who is the better choice is unclear, while many seem to be throwing their support behind Gusmão, very few would object to Amaral's return."
+ Timor.27.d2: "Having previously received the go ahead from the UN for our new government, the Indonesians disrupted our plans for setting up an administration, but the time has now come to elect someone into the office of the president in order to finally legitimise our new government. Xanana Gusmão has been instrumental in the revolutionary efforts, having served in the administration of East Timor during its short history of freedom in 1975 and fought Indonesisa as the head of the Falintil, the armed wing of Fretilin. He was captured later and imprisoned in Jakarta where he also met Francisco Xavier do Amaral, who was president of East Timor during the freedom period. Amaral is also a national hero, as he endured much suffering as a result of his attempts to secure independence for East Timor, he even coordinated independence movements during capture, with Gusmão of course. Who is the better choice is unclear, while many seem to be throwing their support behind Gusmão, very few would object to Amaral's return."
  Timor.27.o1: "Xanana will lead the people!"
  Timor.27.o2: "Francisco Xavier do Amaral is our hero!"
  Timor.28.t: "Indonesia Denies Us Independence!"
@@ -23,25 +23,25 @@ l_english:
  Timor.30.desc: "It seems that the East Timorese revolutionaries made the wise choice of conceding to our peace treaty and backed down under the pressure of the looming inevitability of another military intervention if they continued with their defiance."
  Timor.30.o1: "We knew they'd come around"
  Timor.31.t: "The War is Over!"
- Timor.31.desc: ""
+ Timor.31.desc: "After months of brutal all-out war with Indonesia, they have finally officially withdrawn all their troops from East Timor and signed a white peace with us, recognising us as an independent and sovereign nation. At long last, we have won!"
  Timor.31.o1: "Prosperity to East Timor!"
  Timor.32.t: "Australia Sends Us Aid!"
- Timor.32.desc: ""
+ Timor.32.desc: "Australia has decided to keep to their word and back us up in response to the threatening and unwarranted Indonesian aggression that we face, we now have the strength to fight Indonesia."
  Timor.32.o1: "Rip up their ultimatum and send it back to them in pieces!"
  Timor.33.t: "Francisco Xavier do Amaral Passes Away"
- Timor.33.desc: ""
+ Timor.33.desc: "East Timor's first president, Francisco Xavier do Amaral, died in a hospital in Dili on Tuesday at the age of 75 after a long battle with cancer. He had founded the ASDT party back in 1974 in the first unified front against the Indonesians, unfortunately it isn't very unified anymore as the party turned into a loose coalition of multiple ideologies which had been held together by him."
  Timor.33.o1: "The ASDT and a hero, finally put to rest"
  Timor.34.t: "East Timor Rejects Us As Their Rightful Rulers!"
- Timor.34.desc: ""
+ Timor.34.desc: "It seems that East Timor doesn't take our treaty seriously, we say this as we received it in the post the other day, torn to shreds with foul things written about our administration. It seems a military intervention is our only option as to undo the shame that this has brought upon our government and our people, however if we do not clean up the situation in East Timor quickly, the international community may get involved, and we may not be strong enough for them."
  Timor.34.o1: "To war it is then"
  Timor.35.t: "East Timor Takes Over the Rest of the Island"
- Timor.35.desc: ""
+ Timor.35.desc: "To put it plainly, we are getting our asses whooped, East Timorese forces suppressed the last pockets of control we have over the entire island, and getting a foot in the region and renewing our offensive again wouldn't be worth the cost as they have shown us. The bitter truth is, we must pull out of East Timor."
  Timor.35.o1: "White peace?"
  Timor.36.t: "Inconclusive Result in the War"
- Timor.36.desc: ""
+ Timor.36.desc: "4 months have gone by since the beginning of our special military operation in East Timor and the results do not look great, we have failed to put down a majority of their forces and the international community, particularly the West, smell blood, shall we face the bitter truth and let go?"
  Timor.36.o1: "Our efforts in East Timor have been in vain"
  Timor.36.o2: "I don't care about those damn westerners and their silly games!!!"
- Timor.37.t: ""
+ Timor.37.t: "The Situation in East Timor"
  Timor.37.desc: "Indonesia has insisted on ignoring the international community and will not stop their violent conquest and oppression of the East Timorese people. On one hand, a majority of our people do not want to see the United States get entangled in another affair that doesn't concern us too deeply for it might bring us great pain and suffering as a nation as happened with Vietnam. On the other, we are seen as the international police and protectors of liberty across the world, if we weren't ready on standby to defend all sovereign and free peoples everywhere, what would we be?"
  Timor.37.o1: "They've gone too far"
  Timor.37.o2: "We shouldn't get too involved in everything"
@@ -55,7 +55,12 @@ l_english:
  TIM_Resistance_Movement_Alone: "East Timor Resilience"
  TIM_Resistance_Movement_Alone_desc: "We stand alone, all of East Timor comes together to overthrow our oppressors, for freedom and our people, Indonesia beware!"
  #tooltips
+ Timor.27.tt.a: "Xanana Gusmão will be elected as the president of East Timor, and we will become independent"
+ Timor.27.tt.b: "Francisco Xavier do Amaral will be elected as the president of East Timor, and we will become independent"
+ Timor.29.tt.a: "We will officially be at war with Indonesia effective immediately"
+ Timor.29.tt.b: "We relinquish control of our nation and our identity!"
  Timor.34.tt: "If we don't put this §Ruprising§! to rest in §120 days§Y, we will draw §Yinternational condemnation§! and have to pull out of §YEast Timor§! or face §Rgrave§! consequences."
+ Timor.36.tt.b: "This will warrant an §Rinvasion§! from §Bthe West§!"
  #decisions
  TIM_Independence_war: "The War For Independence"
  TIM_war_for_freedom: "Hold Off Indonesia"
