--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -198,7 +198,7 @@
  BLR_peleng_for_russia: "ATGM Equipment"
  BLR_peleng_for_russia_desc: "We are ready to launch the production of equipment for the Russian ATGM"
  BLR_peleng_for_ukr: "ATGM Equipment"
- BLR_peleng_for_ukr_desc: "We are ready to launch the production of equipment for the Ukranian ATGM"
+ BLR_peleng_for_ukr_desc: "We are ready to launch the production of equipment for the Ukrainian ATGM"
  BLR_sosna_u: "TPV "Sosna-U""
  BLR_sosna_u_desc: "Multichannel thermal imaging sighting device of the gunner, developed by Belarusian designers of the company "Peleng""
  BLR_558_zavod: "558 Aircraft Repair Plant"
@@ -214,7 +214,7 @@
  BLR_russian_weapon_deal_desc: "Russia has agreed to give us a large number of machine guns for free."
  BLR_buy_russian_old_tanks: "Buying Old T-90"
  BLR_buy_russian_old_tanks_desc: "Russia is ready to sell us several outdated and damaged T-90 tanks at a big discount."
- BLR_buy_mig_fleet: "Mig 29"
+ BLR_buy_mig_fleet: "Mig-29"
  BLR_buy_mig_fleet_desc: "Russia is ready to sell us several fighters at a good discount."
  BLR_su33: "Sukhoi Su-33"
  BLR_su33_desc: "The Sukhoi Su-33 is an all-weather carrier-based twin-engine air superiority fighter designed by Sukhoi and manufactured by Komsomolsk-on-Amur Aircraft Production Association, derived from the Su-27 and initially known as the Su-27K. Compared with the Su-27, the Su-33 has a strengthened undercarriage and structure, folding wings and stabilators, all for carrier operations. The Su-33 has canards, and its wings are larger than the Su-27 for a slower stall speed. The Su-33 has upgraded engines and a twin nose wheel, and is air refuelable."
@@ -282,8 +282,8 @@
  BLR_nko_workers_desc: "We are ready to invite Korean workers to our country. They are famous for efficiency and hard work"
  BLR_nko_miiltary_coop: "Military Technical Cooperation With North Korea"
  BLR_nko_miiltary_coop_desc: "We are ready to start military-technical cooperation with the Korean People's Army"
- BLR_constituon_BSSR: "Constituon BSSR"
- BLR_constituon_BSSR_desc: "To begin with, it is necessary to restore the Constitution of the BSSR"
+ BLR_constitution_BSSR: "Constitution BSSR"
+ BLR_constitution_BSSR_desc: "To begin with, it is necessary to restore the Constitution of the BSSR"
  BLR_single_party: "Single Party"
  BLR_single_party_desc: "There should be one party, because we have one path to socialism"
  BLR_rotation_KGB: "Rotation in KGB"
