--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2421,7 +2421,7 @@
  GER_evidence_is_missing: "Missing Evidence"
  GER_evidence_found_fuchs: "A Letter To Kohl"
  GER_evidence_found_khs: "K.S. Calendars"
- GER_evidence_result_loc: "Strenght of the evidences: [GET_GER_evidence_strenght]"
+ GER_evidence_result_loc: "Strength of the evidences: [GET_GER_evidence_strenght]"
  GER_evidence_strenght_strong: "§GStrong§!"
  GER_evidence_strenght_medium: "§YMedium§!"
  GER_evidence_strenght_weak: "§RWeak§!"
