Mexican focus tree

--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -2,7 +2,7 @@
  #dynamic modifiers
  MEX_the_mexican_army: "Mexican Army"
  MEX_the_mexican_army_desc: "After the declaration of independence, the core functions of the army shifted to one of internal affairs, such as the suppression of rebels, waging war against the cartels and aiding civilians in need. As time went on, the needs for a strong military dropped, and with it, its strength. today, the Mexican army isn't ready for a foreign invasion"
- 
+
  #ideas
  MEX_the_mexican_army_idea: "Mexican Army"
  MEX_the_mexican_army_idea_desc: "After the declaration of independence, the core functions of the army shifted to one of internal affairs, such as the suppression of rebels, waging war against the cartels and aiding civilians in need. As time went on, the needs for a strong military dropped, and with it, its strength. today, the Mexican army isn't ready for a foreign invasion"
@@ -42,7 +42,7 @@
  MEX_legislative_power_bad_desc: ""
  MEX_judicial_power_bad: "Inefficient Judicial Power"
  MEX_judicial_power_bad_desc: ""
- 
+
  #focuses
  MEX_sedena: "SEDENA"
  MEX_sedena_desc: "The Mexican Secretariat of National Defense (SEDENA) is the government department responsible for managing Mexico's Army, Air Force, and Navy. SEDENA keeps its scope compact and pivots on resolving internal affairs rather than preparing for foreign threats, consequently entailing Mexico vulnerable to one."
@@ -106,7 +106,7 @@
  MEX_CAS_effort: "CAS effort"
  MEX_CAS_effort_desc: ""
  MEX_Strategic_Bombardments: "Strategic Bombardments"
- MEX_Strategic_Bombardments_desc: "" 
+ MEX_Strategic_Bombardments_desc: ""
 
 MEX_Banamex: "Banamex"
 MEX_Banamex_desc: "Banamex used to operate as the national bank of Mexico. After it's reprivatization it was purchased by the US located Citibank(Citigroup). The Banamex even tried to expand into the US it was a failure and ended up with an accusation of money laundering and with a $140 million fine. "
@@ -194,7 +194,7 @@ MEX_Anti_Corruption_Campaigns_desc: ""
 MEX_Create_an_Illusion_of_Fair_Society: "Create an Illusion of Fair Society"
 MEX_Create_an_Illusion_of_Fair_Society_desc: ""
 MEX_Court_Permex_Oligarchs: "Court Permex Oligarchs"
-MEX_Court_Permex_Oligarchs_desc: "" 
+MEX_Court_Permex_Oligarchs_desc: ""
 MEX_Infilirate_the_Government: "Infilirate the Government"
 MEX_Infilirate_the_Government_desc: ""
 MEX_Begin_Major_State_Reforms: "Begin Major State Reforms"
@@ -333,18 +333,49 @@ MEX_Estado_Mexicano_desc: ""
 
 MEX_Federal_Government_of_Mexico: "Federal Government of Mexico"
 MEX_Federal_Government_of_Mexico_desc: ""
+MEX_Faith_in_the_Constitution: "Faith in the Constitution"
+MEX_Faith_in_the_Constitution_desc: ""
+MEX_the_three_branches: "The 3 Branches"
+MEX_the_three_branches_desc: ""
+MEX_The_Status_Quo: "The Status Quo"
+MEX_The_Status_Quo_desc: ""
+MEX_a_conservative_victory: "A Conservative Victory"
+MEX_a_conservative_victory_desc: ""
+MEX_coalition_of_conservatives: "Coalition of Conservatives"
+MEX_coalition_of_conservatives_desc: ""
+MEX_Reinforcing_Election_results: "Reinforcing Election Results"
+MEX_Reinforcing_Election_results_desc: ""
+MEX_trim_adminstrative_fat: "Trim Administrative Fat"
+MEX_trim_adminstrative_fat_desc: ""
+MEX_economic_deregulation: "Economic Deregulation"
+MEX_economic_deregulation_desc: ""
+MEX_the_peoples_party: "The Peoples Party"
+MEX_the_peoples_party_desc: ""
+MEX_la_familia_mexicana: "La Familia Mexicana"
+MEX_la_familia_mexicana_desc: ""
+MEX_lowering_corporate_taxes: "Lowering Corporate Taxes"
+MEX_lowering_corporate_taxes_desc: ""
+MEX_supporting_land_owners: "Supporting Land Owners"
+MEX_supporting_land_owners_desc: ""
+MEX_a_catholic_democracy: "A Catholic Democracy"
+MEX_a_catholic_democracy_desc: ""
+MEX_cracking_down_on_corruption: "Cracking Down on Corruption"
+MEX_cracking_down_on_corruption_desc: ""
+MEX_promoting_entrepreneurship: "Promoting Entrepreneurship"
+MEX_promoting_entrepreneurship_desc: ""
+MEX_fighting_the_left: "Fighting the Left"
+MEX_fighting_the_left_desc: ""
+MEX_conservative_education: "Conservative Education"
+MEX_conservative_education_desc: ""
+
 MEX_Mexican_Government: "Mexican Government"
 MEX_Mexican_Government_desc: ""
-MEX_The_3_Powers: "The 3 Powers"
-MEX_The_3_Powers_desc: ""
 MEX_Defend_The_Constitution: "Defend The Constitution"
 MEX_Defend_The_Constitution_desc: ""
 MEX_The_Mexican_Identity_defend_the_constitution: "The Mexican Identity"
 MEX_The_Mexican_Identity_defend_the_constitution_desc: ""
 MEX_A_Change_in_Course: "A Change in Course"
 MEX_A_Change_in_Course_desc: ""
-MEX_The_Status_Quo: "The Status Quo"
-MEX_The_Status_Quo_desc: ""
 MEX_Discontent_in_the_Army: "Discontent in the Army"
 MEX_Discontent_in_the_Army_desc: ""
 MEX_Discontent_in_the_People: "Discontent in the People"
@@ -558,7 +589,7 @@ MEX_Ban_the_PT_desc: ""
 MEX_Glory_to_the_State: "Glory to the State"
 MEX_Glory_to_the_State_desc: ""
 MEX_THE_Black_Flag: "The Black Flag"
-MEX_THE_Black_Flag_desc: "" 
+MEX_THE_Black_Flag_desc: ""
 MEX_Preparations_for_war: "Preparations for war"
 MEX_Preparations_for_war_desc: ""
 MEX_Increase_police_funding: "Increase Police funding"
@@ -773,10 +804,10 @@ MEX_Trade_with_Pakistan_desc: ""
  MEX_navy_reforming_tooltip: "§Gthe navy will be slightly reformed!§!"
  MEX_tank_programs_desicions: "§YWe will unlock decisions to increase§! §4Tank Program§! §Yspendings§!"
  MEX_navy_programs_desicions: "§YWe will unlock decisions to increase§! §4Navy Programs§! §Yspendings§!"
- 
+
  MEX_treasury_increasing_spedning: "§OWhile doing this focus§! Additional Expenses: $§R0.500§!\n\n"
  MEX_treasury_tank_program_increasing_spedning: "Additional Expenses: $§R0.500§!\n"
- 
+
  #Decisions
  MEX_millitary_spending_category: "Millitary Programs"
  MEX_tank_programs: "Increase Tank Program budget"
