mexican status quo goal branch & change of course

--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -331,6 +331,8 @@ MEX_The_Natives_Autonomy_desc: ""
 MEX_Estado_Mexicano: "Estado Mexicano"
 MEX_Estado_Mexicano_desc: ""
 
+# Initial branch
+
 MEX_Federal_Government_of_Mexico: "Federal Government of Mexico"
 MEX_Federal_Government_of_Mexico_desc: ""
 MEX_Faith_in_the_Constitution: "Faith in the Constitution"
@@ -339,6 +341,10 @@ MEX_the_three_branches: "The 3 Branches"
 MEX_the_three_branches_desc: ""
 MEX_The_Status_Quo: "The Status Quo"
 MEX_The_Status_Quo_desc: ""
+
+
+# A conservative victory branch
+
 MEX_a_conservative_victory: "A Conservative Victory"
 MEX_a_conservative_victory_desc: ""
 MEX_coalition_of_conservatives: "Coalition of Conservatives"
@@ -367,6 +373,171 @@ MEX_fighting_the_left: "Fighting the Left"
 MEX_fighting_the_left_desc: ""
 MEX_conservative_education: "Conservative Education"
 MEX_conservative_education_desc: ""
+MEX_ensuring_public_safety: "Ensuring Public Safety"
+MEX_ensuring_public_safety_desc: ""
+MEX_robust_work_ethic: "Robust Work Ethic"
+MEX_robust_work_ethic_desc: ""
+MEX_economic_privatizations: "Economic Privatizations"
+MEX_economic_privatizations_desc: ""
+MEX_international_interventinism: "International Interventionism"
+MEX_international_interventinism_desc: ""
+MEX_increase_social_spending: "Increase Social Spending"
+MEX_increase_social_spending_desc: ""
+MEX_advocating_labour_rights: "Advocating Labour Rights"
+MEX_advocating_labour_rights_desc: ""
+MEX_environmental_regulations: "Enviromental Regulations"
+MEX_environmental_regulations_desc: ""
+MEX_investments_into_the_military: "Investments into the Military"
+MEX_investments_into_the_military_desc: ""
+MEX_healthcare_reforms: "Healthcare Reforms"
+MEX_healthcare_reforms_desc: ""
+MEX_religous_teachings_in_schools: "Religious Teachings in School"
+MEX_religous_teachings_in_schools_desc: ""
+MEX_pro_north_american_stance: "Pro-North America Stance"
+MEX_pro_north_american_stance_desc: ""
+MEX_a_welfare_state: "A Welfare State"
+MEX_a_welfare_state_desc: ""
+MEX_promote_national_sovereignty: "Promote National Sovereignty"
+MEX_promote_national_sovereignty_desc: ""
+MEX_reducing_public_debt: "Reducing Public Debt"
+MEX_reducing_public_debt_desc: ""
+MEX_respecting_human_rights: "Respecting Human Rights"
+MEX_respecting_human_rights_desc: ""
+MEX_latin_regional_leadership: "Latin Regional Leadership"
+MEX_latin_regional_leadership_desc: ""
+MEX_renewable_energy_investments: "Renewable Energy Investments"
+MEX_renewable_energy_investments_desc: ""
+MEX_supporting_clean_energy: "Supporting Clean Energy"
+MEX_supporting_clean_energy_desc: ""
+MEX_military_enchancements: "Military Enchancement"
+MEX_military_enchancements_desc: ""
+MEX_viva_mexico: "Viva Mexico"
+MEX_viva_mexico_desc: ""
+
+
+# Left Wing Victory branch
+
+MEX_left_wing_victory: "A Socialist Mexico"
+MEX_left_wing_victory_desc: ""
+MEX_adressing_inequality: "Addressing Inequality"
+MEX_adressing_inequality_desc: ""
+MEX_anti_right_thinking: "Anti Right Thinking"
+MEX_anti_right_thinking_desc: ""
+MEX_neo_liberal_economy: "Anti Neo-Liberal Economy"
+MEX_neo_liberal_economy_desc: ""
+MEX_socialism_of_the_century: "Socialism of the 21st Century"
+MEX_socialism_of_the_century_Desc: ""
+MEX_confidence_in_the_government: "Confidence in the Government"
+MEX_confidence_in_the_government_Desc: ""
+MEX_peoples_industrilazation: "People's Industrialization"
+MEX_peoples_industrilazation_Desc: ""
+MEX_meeting_the_peoples_needs: "Meeting the People's Needs"
+MEX_meeting_the_peoples_needs_Desc: ""
+MEX_social_populism: "Social Populism"
+MEX_social_populism_desc: ""
+MEX_human_rights_advocate: "Human Rights Advocate"
+MEX_human_rights_advocate_Desc: ""
+MEX_integrated_border_defenses: "Integrated Border Defenses"
+MEX_integrated_border_defenses_desc: ""
+MEX_denoucing_the_zapatistas: "Denouncing the Zapatistas"
+MEX_denoucing_the_zapatistas_Desc: ""
+MEX_a_government_for_the_commoner: "A government of the Commoner"
+MEX_a_government_for_the_commoner_DESC: ""
+MEX_the_bank_of_mexico: "The Bank of Mexico"
+MEX_the_bank_of_mexico_Desc: ""
+MEX_supporting_small_business_owners: "Supporting Small Business Owners"
+MEX_supporting_small_business_owners_DEsc: ""
+MEX_tackling_corruption: "Tackling Corruption"
+MEX_tackling_corruption_Desc: ""
+MEX_rallying_public_support_in_the_south: "Rallying Public Supporting in the South"
+MEX_rallying_public_support_in_the_south_Desc: ""
+MEX_a_latin_american_union: "A Lating American Union"
+MEX_a_latin_american_union_desc: ""
+MEX_abrazos_no_balazos: "Abrazos, no Balazos"
+MEX_abrazos_no_balazos_Desc: ""
+MEX_pro_socialist_movements_in_mexico: "Pro-Socialist Movements in Mexico"
+MEX_pro_socialist_movements_in_mexico_Desc: ""
+MEX_empower_labor_unions: "Empower Labor Unions"
+MEX_empower_labor_unions_Desc: ""
+MEX_creation_of_public_universities: "Creation of Public Universities"
+MEX_creation_of_public_universities_DEsc: ""
+MEX_strengthing_the_inner_market: "Strengthening the Inner Market"
+MEX_strengthing_the_inner_market_desc: ""
+MEX_universal_healthcare: "Universal Healthcare"
+MEX_universal_healthcare_Desc: ""
+MEX_minimum_wage_increase: "Minimum Wage Increase"
+MEX_minimum_wage_increase_desc: ""
+MEX_stopping_privatization: "Stopping Privatization"
+MEX_stopping_privatization_desc: ""
+MEX_development_through_Social_private_business: "Development through Social Private Business"
+MEX_development_through_Social_private_business_desc: ""
+MEX_protecting_workers_rights: "Protecting Worker's Rights"
+MEX_protecting_workers_rights_Desc: ""
+MEX_the_fourth_transformation: "The Fourth Transformation"
+MEX_the_fourth_transformation_desc: ""
+
+
+# Change of Course initial branch
+
+MEX_change_of_course: "Change of Course"
+MEX_change_of_course_Desc: ""
+MEX_beginning_of_the_revolution: "Beginning of the Revolution"
+MEX_beginning_of_the_revolution_Desc: ""
+MEX_reaching_out_to_left_wing_groups: "Reaching out to Left Wing Groups"
+MEX_reaching_out_to_left_wing_groups_Desc: ""
+MEX_united_nationalist_movements: "United Nationalist Movements"
+MEX_united_nationalist_movements_desc: ""
+MEX_escalation_of_political_violence: "Escalation of Political Violence"
+MEX_escalation_of_political_violence_desc: ""
+MEX_opposition_media_strengthened: "Opposition Media Strengthened"
+MEX_opposition_media_strengthened_desc: ""
+MEX_tierra_y_libertad: "Tierra y Libertad"
+MEX_tierra_y_libertad_desc: ""
+
+
+# Partido Alianza Social
+
+MEX_partido_alianza_social: "Partido Alianza Social"
+MEX_partido_alianza_social_desc: ""
+MEX_the_natalist_view: "The Natalist View"
+MEX_the_natalist_view_Desc: ""
+MEX_unification_of_the_right: "Unification of the Right"
+MEX_unification_of_the_right_desc: ""
+MEX_a_traditional_education: "A Traditional Education"
+MEX_a_traditional_education_desc: ""
+MEX_a_christian_democracy: "A Christian Democracy"
+MEX_a_christian_democracy_desc: ""
+MEX_la_famila_primero: "La Familia Primero"
+MEX_la_famila_primero_Desc: ""
+MEX_new_election_reforms: "New Election Reforms"
+MEX_new_election_reforms_Desc: ""
+MEX_rejection_of_the_west: "Rejection of the West"
+MEX_rejection_of_the_west_desc: ""
+MEX_centeralization_of_power: "Centralization of Power"
+MEX_centeralization_of_power_desc: ""
+MEX_promoting_civic_participation: "Promoting Civic Participation"
+MEX_promoting_civic_participation_Desc: ""
+MEX_funding_the_police: "Funding the Police"
+MEX_funding_the_police_desc: ""
+MEX_indigenous_peoples_integration: "Indigenous People's Integration"
+MEX_indigenous_peoples_integration_desc: ""
+MEX_strict_anti_corruption_measures: "Strict Anti-Corruption Measures"
+MEX_strict_anti_corruption_measures_Desc: ""
+MEX_trade_protectionism: "Trade Protectionism"
+MEX_trade_protectionism_Desc: ""
+MEX_tax_incentives_for_smes: "Tax incentives for SME's"
+MEX_tax_incentives_for_smes_desc: "A tax incentive for the small and medium enterprises will surely push our great economy forward"
+MEX_self_sufficiency_in_key_sectors: "Self Sufficiency in key Sectors"
+MEX_self_sufficiency_in_key_sectors_desc: "Having a certain self sufficiency in our essencial sectors will provide stability in case of a war and will create quality jobs for our people"
+MEX_strenghting_the_health_care_system: "Strenthening the Health Care System"
+MEX_strenghting_the_health_care_system_desc: ""
+MEX_supporting_the_farmers: "Supporting the Farmers"
+MEX_supporting_the_farmers_Desc: ""
+MEX_mexican_patriotism: "Mexican Patriotism"
+MEX_mexican_patriotism_desc: ""
+
+
+
 
 MEX_Mexican_Government: "Mexican Government"
 MEX_Mexican_Government_desc: ""
