--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -869,8 +869,8 @@
 
  BLR_CV_MR_Fighter1: "Yak-38 Forger"
  BLR_CV_MR_Fighter1_short: "Yak-38 Forger"
- BLR_CV_MR_Fighter2: "MiG-29K Fulcrum-D"
- BLR_CV_MR_Fighter2_short: "MiG-29K Fulcrum-D"
+ BLR_CV_MR_Fighter2: "MiG-29K Fulcrum-D Fulcrum-D"
+ BLR_CV_MR_Fighter2_short: "MiG-29K Fulcrum-D Fulcrum-D"
  BLR_CV_MR_Fighter3: "Su-33 Flanker-D"
  BLR_CV_MR_Fighter3_short: "Su-33 Flanker-D"
  BLR_CV_MR_Fighter4: "Su-47 Firkin"
@@ -8682,8 +8682,8 @@
  SOV_CV_MR_Fighter1_short: "Yak-38 Forger"
  SOV_CV_MR_Fighter2: "Su-33 Flanker-D"
  SOV_CV_MR_Fighter2_short: "Su-33 Flanker-D"
- SOV_CV_MR_Fighter3: "Mig-29K"
- SOV_CV_MR_Fighter3_short: "Mig-29K"
+ SOV_CV_MR_Fighter3: "MiG-29K Fulcrum-D"
+ SOV_CV_MR_Fighter3_short: "MiG-29K Fulcrum-D"
  SOV_CV_MR_Fighter4: "MiG-39K Flatback"
  SOV_CV_MR_Fighter4_short: "MiG-39K Flatback"
  SOV_CV_MR_Fighter5: "MiG-39K Flatback-B"
@@ -8796,8 +8796,8 @@
  UKR_CV_MR_Fighter1_short: "Yak-38 Forger"
  UKR_CV_MR_Fighter2: "Su-33 Flanker-D"
  UKR_CV_MR_Fighter2_short: "Su-33 Flanker-D"
- UKR_CV_MR_Fighter3: "Mig-29K"
- UKR_CV_MR_Fighter3_short: "Mig-29K"
+ UKR_CV_MR_Fighter3: "MiG-29K Fulcrum-D"
+ UKR_CV_MR_Fighter3_short: "MiG-29K Fulcrum-D"
  UKR_CV_MR_Fighter4: "MiG-39K Flatback"
  UKR_CV_MR_Fighter4_short: "MiG-39K Flatback"
  UKR_CV_MR_Fighter5: "MiG-39K Flatback-B"
