--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -869,8 +869,8 @@
 
  BLR_CV_MR_Fighter1: "Yak-38 Forger"
  BLR_CV_MR_Fighter1_short: "Yak-38 Forger"
- BLR_CV_MR_Fighter2: "MiG-29K Fulcrum-D Fulcrum-D"
- BLR_CV_MR_Fighter2_short: "MiG-29K Fulcrum-D Fulcrum-D"
+ BLR_CV_MR_Fighter2: "MiG-29K Fulcrum-D"
+ BLR_CV_MR_Fighter2_short: "MiG-29K Fulcrum-D"
  BLR_CV_MR_Fighter3: "Su-33 Flanker-D"
  BLR_CV_MR_Fighter3_short: "Su-33 Flanker-D"
  BLR_CV_MR_Fighter4: "Su-47 Firkin"
