--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -894,8 +894,8 @@
  BLR_MR_Fighter2_short: "MiG-29 Fulcrum"
  BLR_MR_Fighter3: "MiG-35 Fulcrum-F"
  BLR_MR_Fighter3_short: "MiG-35 Fulcrum-F"
- BLR_MR_Fighter4: "MiG-41 Flatback"
- BLR_MR_Fighter4_short: "MiG-41 Flatback"
+ BLR_MR_Fighter4: "MiG-41 PAK DP"
+ BLR_MR_Fighter4_short: "MiG-41 PAK DP"
  BLR_MR_Fighter5: "MiG-59 Foxglove"
  BLR_MR_Fighter5_short: "MiG-59 Foxglove"
 
@@ -918,8 +918,8 @@
  BLR_strategic_bomber3_short: "Tu-160 Blackjack"
  BLR_strategic_bomber4: "Tu-160M"
  BLR_strategic_bomber4_short: "Tu-160M"
- BLR_strategic_bomber5: "Tu PAK-DA"
- BLR_strategic_bomber5_short: "Tu PAK-DA"
+ BLR_strategic_bomber5: "Tupolev PAK-DA"
+ BLR_strategic_bomber5_short: "Tupolev PAK-DA"
 
  BLR_cas1: "Su-25 Frogfoot"
  BLR_cas1_short: "Su-25 Frogfoot"
@@ -932,8 +932,8 @@
  BLR_cas5: "Su-55"
  BLR_cas5_short: "Su-55"
 
- BLR_naval_plane1: "Il-38 May"
- BLR_naval_plane1_short: "Il-38 May"
+ BLR_naval_plane1: "Ilyushin Il-38"
+ BLR_naval_plane1_short: "Ilyushin Il-38"
  BLR_naval_plane2: "Tu-142 Bear-F"
  BLR_naval_plane2_short: "Tu-142 Bear-F"
  BLR_naval_plane3: "Tu-142M"
@@ -943,8 +943,8 @@
 
  BLR_transport_plane1: "An-26 Curl"
  BLR_transport_plane1_short: "An-26 Curl"
- BLR_transport_plane2: "Il-76 Candid"
- BLR_transport_plane2_short: "Il-76 Candid"
+ BLR_transport_plane2: "Ilyushin Il-76"
+ BLR_transport_plane2_short: "Ilyushin Il-76"
  BLR_transport_plane3: "Il-112"
  BLR_transport_plane3_short: "Il-112"
  BLR_transport_plane4: "Il-276"
@@ -8736,8 +8736,8 @@
 
  SOV_strategic_bomber1: "Tu-95 Bear"
  SOV_strategic_bomber1_short: "Tu-95 Bear"
- SOV_strategic_bomber2: "Tu-22M Blinder"
- SOV_strategic_bomber2_short: "Tu-22M Blinder"
+ SOV_strategic_bomber2: "Tu-22M Backfire"
+ SOV_strategic_bomber2_short: "Tu-22M Backfire"
  SOV_strategic_bomber3: "Tu-160 Blackjack"
  SOV_strategic_bomber3_short: "Tu-160 Blackjack"
  SOV_strategic_bomber4: "Tu-180 Bandit"
@@ -8749,8 +8749,8 @@
 
  SOV_cas1: "Su-25 Frogfoot-A"
  SOV_cas1_short: "Su-25A"
- SOV_cas2: "Su-25 Frogfoot-T"
- SOV_cas2_short: "Su-25T"
+ SOV_cas2: "Su-25T Frogfoot-T"
+ SOV_cas2_short: "Su-25T Frogfoot-T"
  SOV_cas3: "Su-39"
  SOV_cas3_short: "Su-39"
  SOV_cas4: "Su-44"
@@ -8761,7 +8761,7 @@
  SOV_naval_plane1: "Beriev Be-12"
  SOV_naval_plane1_short: "Be-12"
  SOV_naval_plane2: "Ilyushin Il-38"
- SOV_naval_plane2_short: "Il-38"
+ SOV_naval_plane2_short: "Ilyushin Il-38"
  SOV_naval_plane3: "Tu-142M"
  SOV_naval_plane3_short: "Tu-142M"
  SOV_naval_plane4: "Tu-142M2"
@@ -8770,7 +8770,7 @@
  SOV_transport_plane1: "Antonov An-22"
  SOV_transport_plane1_short: "An-22"
  SOV_transport_plane2: "Ilyushin Il-76"
- SOV_transport_plane2_short: "Il-76"
+ SOV_transport_plane2_short: "Ilyushin Il-76"
  SOV_transport_plane3: "Antonov An-124"
  SOV_transport_plane3_short: "An-124"
  SOV_transport_plane4: "PAK-TA"
@@ -8819,8 +8819,8 @@
  UKR_MR_Fighter2_short: "MiG-29 Fulcrum"
  UKR_MR_Fighter3: "Su-30SM"
  UKR_MR_Fighter3_short: "Su-30SM"
- UKR_MR_Fighter4: "MiG-39 Foxglove"
- UKR_MR_Fighter4_short: "MiG-39 Foxglove"
+ UKR_MR_Fighter4: "MiG-39 Flatback"
+ UKR_MR_Fighter4_short: "MiG-39 Flatback"
  UKR_MR_Fighter5: "Mikoyan LMFS"
  UKR_MR_Fighter5_short: "Mikoyan LMFS"
 
@@ -8837,8 +8837,8 @@
 
  UKR_strategic_bomber1: "Tu-95 Bear"
  UKR_strategic_bomber1_short: "Tu-95 Bear"
- UKR_strategic_bomber2: "Tu-22M Blinder"
- UKR_strategic_bomber2_short: "Tu-22M Blinder"
+ UKR_strategic_bomber2: "Tu-22M Backfire"
+ UKR_strategic_bomber2_short: "Tu-22M Backfire"
  UKR_strategic_bomber3: "Tu-160 Blackjack"
  UKR_strategic_bomber3_short: "Tu-160 Blackjack"
  UKR_strategic_bomber4: "Tu-180 Bandit"
@@ -8850,8 +8850,8 @@
 
  UKR_cas1: "Su-25 Frogfoot-A"
  UKR_cas1_short: "Su-25A"
- UKR_cas2: "Su-25 Frogfoot-T"
- UKR_cas2_short: "Su-25T"
+ UKR_cas2: "Su-25T Frogfoot-T"
+ UKR_cas2_short: "Su-25T Frogfoot-T"
  UKR_cas3: "Su-39"
  UKR_cas3_short: "Su-39"
  UKR_cas4: "Su-39M"
@@ -8913,8 +8913,8 @@
  NKO_MR_Fighter2_short: "MiG-29 Fulcrum"
  NKO_MR_Fighter3: "Su-30SM"
  NKO_MR_Fighter3_short: "Su-30SM"
- NKO_MR_Fighter4: "MiG-39 Foxglove"
- NKO_MR_Fighter4_short: "MiG-39 Foxglove"
+ NKO_MR_Fighter4: "MiG-39 Flatback"
+ NKO_MR_Fighter4_short: "MiG-39 Flatback"
  NKO_MR_Fighter5: "Mikoyan LMFS"
  NKO_MR_Fighter5_short: "Mikoyan LMFS"
 
@@ -8934,8 +8934,8 @@
 
  NKO_strategic_bomber1: "Tu-95 Bear"
  NKO_strategic_bomber1_short: "Tu-95 Bear"
- NKO_strategic_bomber2: "Tu-22M Blinder"
- NKO_strategic_bomber2_short: "Tu-22M Blinder"
+ NKO_strategic_bomber2: "Tu-22M Backfire"
+ NKO_strategic_bomber2_short: "Tu-22M Backfire"
  NKO_strategic_bomber3: "Tu-160 Blackjack"
  NKO_strategic_bomber3_short: "Tu-160 Blackjack"
  NKO_strategic_bomber4: "Tu-180 Bandit"
@@ -8947,8 +8947,8 @@
 
  NKO_cas1: "YAK-38"
  NKO_cas1_short: "YAK-38"
- NKO_cas2: "Su-25 Frogfoot-T"
- NKO_cas2_short: "Su-25T"
+ NKO_cas2: "Su-25T Frogfoot-T"
+ NKO_cas2_short: "Su-25T Frogfoot-T"
  NKO_cas3: "Su-39"
  NKO_cas3_short: "Su-39"
  NKO_cas4: "Su-39M"
@@ -8968,9 +8968,9 @@
  NKO_transport_plane1: "Antonov An-26"
  NKO_transport_plane1_short: "An-26"
  NKO_transport_plane2: "Ilyushin Il-76"
- NKO_transport_plane2_short: "Il-76"
+ NKO_transport_plane2_short: "Ilyushin Il-76"
  NKO_transport_plane3: "Ilyushin Il-76MD"
- NKO_transport_plane3_short: "Il-76MD"
+ NKO_transport_plane3_short: "Ilyushin Il-76MD"
  NKO_transport_plane4: "PAK-TA"
  NKO_transport_plane4_short: "PAK-TA"
 
